Address into Person Record

--- a/src/Busybee/FormBundle/Resources/config/services.yml
+++ b/src/Busybee/FormBundle/Resources/config/services.yml
@@ -30,7 +30,7 @@ services:
         class: Busybee\FormBundle\Validator\Constraints\BackgroundImageValidator
         tags:
             - { name: validator.constraint_validator, alias: background_image_validator }
-    form.timeType:
+    form.time.type:
         class: Busybee\FormBundle\Type\TimeType
         arguments:
             - '%timezone%'
