--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -22,6 +22,10 @@ busybee_institute:
     resource: "@BusybeeInstituteBundle/Resources/config/routing.yml"
     prefix:   /institute/
 
+busybee_family:
+    resource: "@BusybeeFamilyBundle/Resources/config/routing.yml"
+    prefix:   /family/
+
 busybee_plugin:
     resource: .
     type: advanced_extra
