--- a/src/Busybee/FamilyBundle/Resources/config/family/parameters.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/family/parameters.yml
@@ -1,4 +1,4 @@
-# Person
+# Family
 parameters:
     family:
         details:
@@ -8,3 +8,6 @@ parameters:
         contacts:
             label: family.tab.contacts
             include: 'BusybeeFamilyBundle:Family:contacts.html.twig'
+        people:
+            label: family.tab.people
+            include: 'BusybeeFamilyBundle:Family:people.html.twig'
