--- a/src/Busybee/FamilyBundle/Resources/config/validation/Family.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/validation/Family.yml
@@ -13,3 +13,5 @@ Busybee\FamilyBundle\Entity\Family:
             - Valid: ~
         emergencyContact:
             - Valid: ~
+        student:
+            - Valid: ~
