--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "imsky/holder": "2.9.*",
         "vsn4ik/bootstrap-submenu": "2.0.*",
         "twig/extensions": "^1.4",
-        "core23/dompdf-bundle": "^1.0"
+        "core23/dompdf-bundle": "^1.0",
+        "league/oauth2-google": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
