Added Google League OAuth2
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -40,3 +40,7 @@ parameters:
         specials: 0
     upload_path: '../web/uploads/%current_year%/%current_month%'
     timezone: UTC
+    google:
+        oauth: off
+        client_id: ''
+        client_secret: ''
