DOMPDF PHP 7.1 Issue,  Staff Start
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -88,3 +88,8 @@ Busybee\PersonBundle\Entity\Person:
                 inverseJoinColumns:
                     phone_id:
                         referencedColumnName: id
+    oneToOne:
+        staff:
+            targetEntity: Busybee\PersonBundle\Entity\Staff
+            cascade: [persist, remove]
+            mappedBy: person
