--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Staff.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Staff.orm.yml
@@ -33,8 +33,6 @@ Busybee\PersonBundle\Entity\Staff:
     oneToOne:
         person:
             targetEntity: Busybee\PersonBundle\Entity\Person
-            joinColumn:
-                name: person_id
-                referencedColumn: id
-                
+            inversedBy: staff
+
             
