--- a/src/Busybee/PersonBundle/Resources/config/validation/Person.yml
+++ b/src/Busybee/PersonBundle/Resources/config/validation/Person.yml
@@ -30,3 +30,5 @@ Busybee\PersonBundle\Entity\Person:
             - Valid: ~
         address2:
             - Valid: ~
+        staff:
+            - Valid: ~
