WIP STaff/Person Buttons and Form
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/FormBundle/Resources/config/services.yml
+++ b/src/Busybee/FormBundle/Resources/config/services.yml
@@ -42,3 +42,7 @@ services:
             - '@setting.manager'
         tags:
             - { name: validator.constraint_validator, alias: setting_validator }
+    validator.blank.or.valid.constraint:
+        class: Busybee\FormBundle\Validator\Constraints\BlankOrValidValidator
+        tags:
+            - { name: validator.constraint_validator, alias: blank_or_valid_validator }
