Corrections to staff Member addition to Person Forms
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/config/services.yml
+++ b/src/Busybee/PersonBundle/Resources/config/services.yml
@@ -143,10 +143,10 @@ services:
     person.form.personType:
         class: Busybee\PersonBundle\Form\PersonType
         arguments:
-            - '@setting.manager'
+            - '@person.manager'
             - '@doctrine.orm.entity_manager'
             - '@person.uploader.photo'
-        tags: 
+        tags:
             - { name: form.type }
     person.form.addressType:
         class: Busybee\PersonBundle\Form\AddressType
