--- a/src/Busybee/PersonBundle/Resources/config/person/parameters.yml
+++ b/src/Busybee/PersonBundle/Resources/config/person/parameters.yml
@@ -12,3 +12,7 @@ parameters:
             label: person.tab.staff
             include: BusybeePersonBundle:Person:staff.html.twig
             message: staffMessage
+        careGiver:
+            label: person.tab.careGiver
+            include: BusybeePersonBundle:Person:careGiver.html.twig
+            message: careGiverMessage
