Student, Staff and CareGiver integrated into Person Form
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/config/doctrine/CareGiver.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/CareGiver.orm.yml
@@ -24,8 +24,7 @@ Busybee\PersonBundle\Entity\CareGiver:
             joinColumns:
                 modified_by:
                     referencedColumnName: id
+    oneToOne:
         person:
             targetEntity: Busybee\PersonBundle\Entity\Person
-            joinColumns:
-                person_id:
-                    referencedColumn: id
+            inversedBy: caregiver
