--- a/src/Busybee/PersonBundle/Resources/config/validation/Person.yml
+++ b/src/Busybee/PersonBundle/Resources/config/validation/Person.yml
@@ -32,3 +32,5 @@ Busybee\PersonBundle\Entity\Person:
             - Valid: ~
         staff:
             - Valid: ~
+        student:
+            - Valid: ~
