--- a/src/Busybee/PersonBundle/Resources/config/validation/Student.yml
+++ b/src/Busybee/PersonBundle/Resources/config/validation/Student.yml
@@ -1,3 +1,8 @@
 Busybee\PersonBundle\Entity\Student:
     constraints:
         - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: person
+    properties:
+        startAtSchool:
+            - Date: ~
+        startAtThisSchool:
+            - Date: ~
