--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -94,3 +94,13 @@ Busybee\PersonBundle\Entity\Person:
             cascade: [persist, remove]
             mappedBy: person
             nullable: true
+        caregiver:
+            targetEntity: Busybee\PersonBundle\Entity\CareGiver
+            cascade: [persist, remove]
+            mappedBy: person
+            nullable: true
+        student:
+            targetEntity: Busybee\PersonBundle\Entity\Student
+            cascade: [persist, remove]
+            mappedBy: person
+            nullable: true
