User integration at Person
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -104,3 +104,8 @@ Busybee\PersonBundle\Entity\Person:
             cascade: [persist, remove]
             mappedBy: person
             nullable: true
+        user:
+            targetEntity: Busybee\SecurityBundle\Entity\User
+            cascade: [persist]
+            mappedBy: person
+            nullable: true
