--- a/src/Busybee/PersonBundle/Resources/config/validation/Person.yml
+++ b/src/Busybee/PersonBundle/Resources/config/validation/Person.yml
@@ -34,3 +34,5 @@ Busybee\PersonBundle\Entity\Person:
             - Valid: ~
         student:
             - Valid: ~
+        user:
+            - Valid: ~
