Person List / Category Testing and Display
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/FamilyBundle/Resources/config/doctrine/Family.orm.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/doctrine/Family.orm.yml
@@ -39,7 +39,7 @@ Busybee\FamilyBundle\Entity\Family:
                 inverseJoinColumns:
                     emergency_contact_id:
                         referencedColumnName: id
-        student:
+        students:
             targetEntity: Busybee\PersonBundle\Entity\Student
             cascade: [ 'persist' ]
             joinTable:
